--- a/mpv.conf
+++ b/mpv.conf
@@ -28,8 +28,7 @@ af=lavfi=[loudnorm=I=-16:LRA=4]
 
 [reduce-speech-noise]
 profile-restore=copy
-af=lavfi=[loudnorm=I=-16],highpass=f=200,lowpass=f=3000,afftdn,arnndn=m=/home/francois/.config/mpv/std.rnnn #,anlmdn # anlmdn has an insane cpu consumption so it's disabled
-
+af=highpass=f=200,lowpass=f=3000,asendcmd=0.0 afftdn sn start,asendcmd=4.0 afftdn sn stop,afftdn=nr=20:nf=-40:tn=1,arnndn=m="C:\Users\franc\Desktop\mpv\portable_config\filters\std.rnnn",anlmdn,dialoguenhance,lavfi=[loudnorm=I=-16:LRA=4] # anlmdn has an insane cpu consumption so it's disabled
 [antiring-&-debanding-profile]
 profile-restore=copy
 ###### Antiring
